--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/Kroquetitaa/typescript#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.184",
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "date-fns": "^2.29.2"
+    "date-fns": "^2.29.2",
+    "lodash": "^4.17.21"
   }
 }
