--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Kroquetitaa/typescript#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/lodash": "^4.14.184",
     "typescript": "^4.8.3"
   },
